# docs/swagger.json
@@ -1390,6 +1390,12 @@
                         "name": "job_posting_id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Order",
+                        "name": "order",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -5398,6 +5404,7 @@
         "request.CreateTemplateQuestion": {
             "type": "object",
             "required": [
+                "form_type",
                 "name",
                 "status"
             ],
@@ -5675,6 +5682,7 @@
         "request.UpdateTemplateQuestion": {
             "type": "object",
             "required": [
+                "form_type",
                 "id",
                 "name",
                 "status"
@@ -5887,8 +5895,14 @@
                 "job_posting_id": {
                     "type": "string"
                 },
+                "order": {
+                    "type": "integer"
+                },
                 "status": {
                     "$ref": "#/definitions/entity.ApplicantStatus"
+                },
+                "template_question": {
+                    "$ref": "#/definitions/response.TemplateQuestionResponse"
                 },
                 "updated_at": {
                     "type": "string"
