# internal/http/response/applicant_response.go
@@ -8,13 +8,15 @@ import (
 )
 
 type ApplicantResponse struct {
-	ID            uuid.UUID              `json:"id"`
-	UserProfileID uuid.UUID              `json:"user_profile_id"`
-	JobPostingID  uuid.UUID              `json:"job_posting_id"`
-	AppliedDate   time.Time              `json:"applied_date"`
-	Status        entity.ApplicantStatus `json:"status"`
-	CreatedAt     time.Time              `json:"created_at"`
-	UpdatedAt     time.Time              `json:"updated_at"`
-	JobPosting    *JobPostingResponse    `json:"job_posting"`
-	UserProfile   *UserProfileResponse   `json:"user_profile"`
+	ID               uuid.UUID                 `json:"id"`
+	UserProfileID    uuid.UUID                 `json:"user_profile_id"`
+	JobPostingID     uuid.UUID                 `json:"job_posting_id"`
+	AppliedDate      time.Time                 `json:"applied_date"`
+	Order            int                       `json:"order"`
+	Status           entity.ApplicantStatus    `json:"status"`
+	CreatedAt        time.Time                 `json:"created_at"`
+	UpdatedAt        time.Time                 `json:"updated_at"`
+	TemplateQuestion *TemplateQuestionResponse `json:"template_question"`
+	JobPosting       *JobPostingResponse       `json:"job_posting"`
+	UserProfile      *UserProfileResponse      `json:"user_profile"`
 }
